--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   <use href="./images/icons-homework4/symbol-defs.svg#human"></use>
                 </svg>
               </span>
-              <input class="modal-iput" type="text" name="name" id="name" />
+              <input class="modal-input" type="text" name="name" id="name" />
             </div>
             <div class="modal-input__container">
               <label class="modal-label" for="tel">Телефон</label>
@@ -335,7 +335,7 @@
                   <use href="./images/icons-homework4/symbol-defs.svg#phone"></use>
                 </svg>
               </span>
-              <input class="modal-iput" type="tel" name="telephone" id="tel" />
+              <input class="modal-input" type="tel" name="telephone" id="tel" />
             </div>
             <div class="modal-input__container">
               <label class="modal-label" for="email">Почта</label>
@@ -344,7 +344,7 @@
                   <use href="./images/icons-homework4/symbol-defs.svg#envelope-modal"></use>
                 </svg>
               </span>
-              <input class="modal-iput" type="email" name="email" id="email" />
+              <input class="modal-input" type="email" name="email" id="email" />
             </div>
             <div class="modal-input__container">
               <label class="modal-label" for="textarea">Комментарий</label>
