--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <div class="modal-input__container">
               <label class="modal-label" for="name">Имя</label>
               <span>
-                <svg class="modal-human__icon">
+                <svg class="modal-human__icon modal-icon">
                   <use href="./images/icons-homework4/symbol-defs.svg#human"></use>
                 </svg>
               </span>
@@ -331,7 +331,7 @@
             <div class="modal-input__container">
               <label class="modal-label" for="tel">Телефон</label>
               <span>
-                <svg class="modal-phone__icon">
+                <svg class="modal-phone__icon modal-icon">
                   <use href="./images/icons-homework4/symbol-defs.svg#phone"></use>
                 </svg>
               </span>
@@ -340,7 +340,7 @@
             <div class="modal-input__container">
               <label class="modal-label" for="email">Почта</label>
               <span>
-                <svg class="modal-email__icon">
+                <svg class="modal-email__icon modal-icon">
                   <use href="./images/icons-homework4/symbol-defs.svg#envelope-modal"></use>
                 </svg>
               </span>
