--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="index header">
       <div class="container container-nav">
         <nav class="nav">
-          <a class="logo" href="/"><span>Web</span>Studio</a>
+          <a class="logo header-logo" href="/"><span>Web</span>Studio</a>
 
           <ul class="nav-links">
             <li class="nav-current nav-link"><a class="nav-current-link" href="">Студия</a></li>
@@ -320,31 +320,31 @@
           <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
           <form class="modal-form">
             <div class="modal-input__container">
-              <label class="modal-label" for="name">Имя</label>
+              <label class="modal-label">Имя</label>
               <span>
-                <svg class="modal-human__icon modal-icon">
+                <svg class="modal-icon">
                   <use href="./images/icons-homework4/symbol-defs.svg#human"></use>
                 </svg>
               </span>
-              <input class="modal-input" type="text" name="name" id="name" />
+              <input class="modal-input" type="text" name="name" />
             </div>
             <div class="modal-input__container">
-              <label class="modal-label" for="tel">Телефон</label>
+              <label class="modal-label">Телефон</label>
               <span>
-                <svg class="modal-phone__icon modal-icon">
+                <svg class="modal-icon">
                   <use href="./images/icons-homework4/symbol-defs.svg#phone"></use>
                 </svg>
               </span>
-              <input class="modal-input" type="tel" name="telephone" id="tel" />
+              <input class="modal-input" type="tel" name="telephone" />
             </div>
             <div class="modal-input__container">
-              <label class="modal-label" for="email">Почта</label>
+              <label class="modal-label">Почта</label>
               <span>
-                <svg class="modal-email__icon modal-icon">
+                <svg class="modal-icon">
                   <use href="./images/icons-homework4/symbol-defs.svg#envelope-modal"></use>
                 </svg>
               </span>
-              <input class="modal-input" type="email" name="email" id="email" />
+              <input class="modal-input" type="email" name="email" />
             </div>
             <div class="modal-input__container">
               <label class="modal-label" for="textarea">Комментарий</label>
@@ -352,8 +352,11 @@
             </div>
 
             <div class="modal-checkbox__submit">
-              <input type="checkbox" name="" id="contract" />
-              <label class="modal__contract-checkbox" for="contract"> Соглашаюсь с рассылкой и принимаю </label>
+              <label class="modal__contract-checkbox" for="contract">
+                Соглашаюсь с рассылкой и принимаю
+                <input class="modal-checkbox__input" type="checkbox" name="" id="contract" />
+                <span class="custom-checkbox"></span>
+              </label>
               <a class="modal__contract-checkbox modal__contract-checkbox-link" href="">Условия договора</a>
             </div>
             <button class="general-button modal-submit__button" type="submit">Отправить</button>
@@ -413,13 +416,12 @@
             </ul>
           </div>
         </div>
-        <div>
+        <div class="footer-newsletter">
           <h2 class="footer-header">подпишитесь на рассылку</h2>
           <div class="footer_form-button">
             <form class="footer-email__form">
               <label>
-                E-mail
-                <input type="email" name="email" />
+                <input class="footer-input" type="email" name="email" placeholder=" E-mail" />
               </label>
 
               <button class="footer-signup__button general-button" type="submit">
