--- a/portfolio.html
+++ b/portfolio.html
@@ -235,9 +235,9 @@
             <a class="logo" href="/"><span>Web</span>Studio</a>
           </div>
           <address class="footer-contacts">
-            <p class="footer-contact">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="footer-contact footer-adress">г. Киев, пр-т Леси Украинки, 26</a>
             <a class="footer-contact" href="info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">099 111 11 11</a>
+            <a class="footer-contact" href="tel:+380991111111">099 111 11 11</a>
           </address>
         </div>
 
