--- a/index.html
+++ b/index.html
@@ -320,11 +320,13 @@
           <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
           <form class="modal-form">
             <div class="modal-input__container">
-              <label class="modal-label">Имя</label>
-              <svg class="modal-icon">
-                <use href="./images/icons-homework4/symbol-defs.svg#human"></use>
-              </svg>
-              <input class="modal-input" type="text" name="name" />
+              <label class="modal-label"
+                >Имя
+                <svg class="modal-icon">
+                  <use href="./images/icons-homework4/symbol-defs.svg#human"></use>
+                </svg>
+                <input class="modal-input" type="text" name="name" />
+              </label>
             </div>
             <div class="modal-input__container">
               <label class="modal-label">Телефон</label>
@@ -334,11 +336,13 @@
               <input class="modal-input" type="tel" name="telephone" />
             </div>
             <div class="modal-input__container">
-              <label class="modal-label">Почта</label>
-              <svg class="modal-icon">
-                <use href="./images/icons-homework4/symbol-defs.svg#envelope-modal"></use>
-              </svg>
-              <input class="modal-input" type="email" name="email" />
+              <label class="modal-label"
+                >Почта
+                <svg class="modal-icon">
+                  <use href="./images/icons-homework4/symbol-defs.svg#envelope-modal"></use>
+                </svg>
+                <input class="modal-input" type="email" name="email" />
+              </label>
             </div>
             <div class="modal-input__container">
               <label class="modal-label" for="textarea">Комментарий</label>
