--- a/index.html
+++ b/index.html
@@ -329,11 +329,13 @@
               </label>
             </div>
             <div class="modal-input__container">
-              <label class="modal-label">Телефон</label>
-              <svg class="modal-icon">
-                <use href="./images/icons-homework4/symbol-defs.svg#phone"></use>
-              </svg>
-              <input class="modal-input" type="tel" name="telephone" />
+              <label class="modal-label"
+                >Телефон
+                <svg class="modal-icon">
+                  <use href="./images/icons-homework4/symbol-defs.svg#phone"></use>
+                </svg>
+                <input class="modal-input" type="tel" name="telephone" />
+              </label>
             </div>
             <div class="modal-input__container">
               <label class="modal-label"
