--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="styleheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="index header">
@@ -45,7 +45,7 @@
     <main>
       <section class="hero-section">
         <div class="container container-hero">
-          <h1 class="header-hero">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-header">Эффективные решения для вашего бизнеса</h1>
           <button class="general-button" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
@@ -103,11 +103,11 @@
       </section>
       <!--карточки команды-->
       <section class="team section-padding">
-        <div class="team-div container">
+        <div class="container">
           <h2 class="section-header">Наша команда</h2>
           <ul class="team-cards">
             <li class="team-card">
-              <img src="./images/images_homework1/игорь_демьяненко.jpg" alt="Мужчина" width="270" />
+              <img src="./images/images_homework1/игорь_демьяненко.jpg" alt="Мужчина" width="270px" />
               <h3 class="names-header">Игорь Демьяненко</h3>
               <p>Product designer</p>
               <div>
@@ -417,7 +417,7 @@
           </div>
         </div>
         <div class="footer-newsletter">
-          <h2 class="footer-header newletter-header">подпишитесь на рассылку</h2>
+          <h2 class="footer-header">подпишитесь на рассылку</h2>
           <form class="footer-email__form">
             <label>
               <input class="footer-input" type="email" name="email" placeholder=" E-mail" />
